:lipstick: Fix on too large scrool-x

--- a/src/components/FullWidthContainer/FullWidthContainer.module.css
+++ b/src/components/FullWidthContainer/FullWidthContainer.module.css
@@ -1,12 +1,12 @@
 .wrapper-full-width {
-  position: relative;
+  /*position: relative;*/
 }
 
 .wrapper-full-width__background:first-child {
   position: absolute;
-  left: calc(((100vw - 980px) / 2) * -1);
-  width: 100vw;
-  height: 100%;
+  left: 0;
+  right: 0;
+  height: inherit;
   background-color: #d8d8d8;
 }
 
