--- a/src/components/LargeContainer/LargeContainer.module.css
+++ b/src/components/LargeContainer/LargeContainer.module.css
@@ -5,5 +5,5 @@
 }
 
 .large-container--relative {
-  position: relative;
+  /*position: relative;*/
 }
