--- a/src/pages/meetup.module.css
+++ b/src/pages/meetup.module.css
@@ -3,6 +3,7 @@
 }
 
 .video {
+  height: 70%;
   margin: 20px 0 40px 0;
 }
 
